--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
      <h1> I can push to this code on github</h1>
      <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio reiciendis mollitia possimus, fuga praesentium veniam aperiam repellat architecto, quos velit iusto cumque aut veritatis corrupti magni quis modi, sint cupiditate?</h3>
      <strong>Long live bangladesh</strong>
+
+     <i>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto reiciendis sapiente ea totam aliquam ad ducimus veritatis assumenda, architecto hic!</i>
+
+     <div>
+         this is div tag
+     </div>
+     <span>Span always use in a small content tag</span>
 </body>
 </html>
