--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
      <div>
          this is div tag
      </div>
-     <span>Span always use in a small content tag</span>
+     <span>Span always use in a small content tag</span> 
+
+     <img src="../img/jhankar2.png" alt="">
 </body>
 </html>
